# RedTeamDashboard

./: .gitignore  .trivyignore  CHARTER.md  CLAUDE.md  Makefile  README.MD  README.md  quick_test.sh
.github/scripts/: generate_release_notes.py
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/scripts/: __init__.py  drive_engagement.py
backend/tests/: _stub_tools.py  conftest.py  test_admin_users_api.py  test_agent_configurations.py  test_agent_execution_cancel.py  test_api_keys_api.py  test_approvals_api.py  test_audit_log_immutable.py  test_auth_boundaries.py  test_auto_assess_toggle.py  test_c6_legacy_gate.py  test_completion_api.py  test_costs.py  test_coverage_service.py  test_darkweb_import.py  test_data_integrity_remediation.py  test_direct_run_lease.py  test_engagement_memory.py  test_engagement_rollup.py  test_engagement_strategist_governance.py  test_engagement_strategist_races.py  test_engagements_api.py  test_entities.py  test_entities_cache.py  test_entity_identity.py  test_entra_auth.py  test_events_api.py  test_execution_durability.py  test_finding_activity.py  test_finding_chat.py  test_finding_feedback_outbox.py  test_finding_input_bounds.py  test_finding_rewrite.py  test_finding_run_lineage.py  test_findings_bulk_update.py  test_findings_import.py  test_findings_merge.py  test_findings_validation.py  test_freeipapi_parser.py  test_gate.py  (+64 more)
cli/: README.md  pyproject.toml
cli/src/rtd/: __init__.py  __main__.py  client.py  config.py  main.py  output.py
cli/src/rtd/commands/: __init__.py  approve.py  engagement.py  findings.py  grants.py  login.py  profile.py  run.py  ssh.py  tail.py
cli/src/xray/: __init__.py  __main__.py  client.py  config.py  main.py  output.py
cli/src/xray/commands/: approve.py  findings.py  grants.py  login.py  profile.py  project.py  run.py  ssh.py  tail.py
cli/tests/: conftest.py  test_client.py  test_commands.py  test_config.py
docs/: ARCHITECTURE_SKETCH_V2.md  DEPLOY.md  DEPLOYMENT_SECURITY_TYPING.md  ENGAGEMENT_STRATEGIST_PROPOSAL.md  ENTRA_SETUP.md  HANDOFF.md  MODULARIZATION_SPEC.md  MODULARIZATION_SPEC_RESPONSE.md  PHASE_11_TESTING.md  PRODUCTION_MIGRATION.md  ROADMAP.md  SWA_TO_APP_MIGRATION.md  V1_CUTOVER_CHECKLIST.md  v3-intelligence-token-audit.md
frontend/: Dockerfile  package-lock.json  package.json  staticwebapp.config.json.template  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: admin-only-gate.tsx  approval-inbox.tsx  approvals-list.tsx  approvals-modal.tsx  attribution-table.tsx  auth-gate.tsx  burp-importer.tsx  contributions-view.tsx  copy-json-button.tsx  costs-view.tsx  date-time.tsx  default-model-card.tsx  default-tools-banner.tsx  diagnostics-view.tsx  discord-channel-connect.tsx  (+44 more)
infra/: .env.example  docker-compose.override.yml  docker-compose.yml
scripts/: dev-doctor.sh  local-up.sh  test-backend.sh
(+405 files in other folders)
