[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "rtd-cli"
version = "0.9.0"
description = "Command-line client for the Red Team Dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Red Team Dashboard contributors" }]
keywords = ["red-team", "security", "cli", "rtd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "httpx-sse>=0.4",
  "rich>=13.7",
  "tomli-w>=1.0",
]

[project.scripts]
rtd = "rtd.main:main_entrypoint"

[project.urls]
Homepage = "https://github.com/DonPercival0x45/RedTeamDashboard"
Issues = "https://github.com/DonPercival0x45/RedTeamDashboard/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rtd"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
